edit article1 + article 2 start

--- a/WebContent/article2.html
+++ b/WebContent/article2.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="layout template responsive">
 	<meta name="author" content="Paolo Apostolico, Pamela Casullo, Giulio Triggiani">
 	 
-	<title>Lobby Mad Discord</title>
+	<title>Nuova Stagione 2020-2021 Mad Discord</title>
 	
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigins=anomymous >
 	<link rel="stylesheet" href="css/layout.css">
@@ -53,20 +53,15 @@
   
     </ul>
     </form>
-  	</div>
+  </div>
 </nav>
 	
 <div class=article>
-    <h1><img id=logo src="https://c7.uihere.com/files/213/439/710/discord-computer-icons-social-media-online-chat-internet-bot-remix.jpg" width=100><center>Nuova Apertura lobby a Salerno per i "Mad Discord"</center></h1>
+    <h1><img id=logo src="https://c7.uihere.com/files/213/439/710/discord-computer-icons-social-media-online-chat-internet-bot-remix.jpg" width=100><center>Nuova Stagione per i Mad Discord</center></h1>
     <br><br><br>
-	<p> Su tanta richiesta da voi fan e gamers è stata inaugurata l'apertura della nuova gaming lobby proprio al centro di Salerno raggiungibile anche tramite navetta dalla stazione.
-		Con uno spazio di oltre 100 m² essa potrà ospitare oltre 20 postazioni pc dotati di componenti di ultima generazione che permetteranno performance eccezionali per qualunque tipo di gioco, una couch zone per riposarsi dopo lunghe sessione di gaming, una zona bar che aprirà durante la serata e un'ulteriore zona gaming con diverse console tra quali: playstation IV, Xbox, e altro...
-		Siamo ansiosi di annunciarvi che a breve sarà anche aperta una zona dedicata alla realtà virtuale con stanza dedicata e diversi visori in modo da poter giocare in cooperativa in fantastiche avventure in mondi virtuali.
-		Inoltre vi è un piano superiore con diversi uffici nei quali è possibile fare abbonamenti ed iscriversi al club in modo da poter usufruire di diversi sconti e non perdersi i diversi eventi di gaming organizzati dagli amministratori della lobby.
-		Su che aspetti? Vieni tu stesso a testare il brivido del gaming a "Lobby a salerno" e avrai in omaggio § </p>
-</div>
-<div id=video><center><iframe width="1024" height="768" src="https://www.youtube.com/embed/d6TV1ARhtpQ?autoplay=1">
-</iframe></center>
+	<p> Inizia la nuova stagione e-sport per il team ufficiale "Esport società" nel torneo nazionale PG Nationals di lega prima dove si contenderanno numerosi team ben conosciuti nello scenario esport italiano (come gli imbattuti Team-Z) ma anche nuove entrate e nuovi volti pronti per mostrare il loro valore. Manager Daniele Basso e coach Marco Leandri rilasciano parole rassicuranti dicendo di poter garantire un buon posto per la loro squadra in questa stagione e nei vari tornei a venire usando tali parole "In questa stagione stagione i ragazzi riusciranno a dare spettacolo mostrando il duro lavoro messo durante gli allenamenti per creare l'impeccabile sinergia che ora possiedono".
+		Questa stagione, come le precedenti, prevede 3 tornei ufficiali con annessi qualifier per parteciparvi e dalle dichiarazioni fatte "Esport Società" non salterà alcuno di quest'ultimi mettendosi completamente in gioco per quello che sarà questa stagione 2020-2021.
+		Non rimane che dare in bocca al lupo ai nostri ragazzi e soprattutto al nostro allenatore con la speranza che riusciranno a portare a casa risultati sensazionali!</p>
 </div>
 
 </body>
