default.css aggiunte

--- a/WebContent/article1.html
+++ b/WebContent/article1.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Paolo Apostolico, Pamela Casullo, Giulio Triggiani">
 	 
 	<title>Lobby Mad Discord</title>
-	
+	<link rel=stylesheet href="css/default.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigins=anomymous >
 	<link rel="stylesheet" href="css/layout.css">
 
