--- a/WebContent/article2.html
+++ b/WebContent/article2.html
@@ -10,6 +10,7 @@
 	 
 	<title>Nuova Stagione 2020-2021 Mad Discord</title>
 	
+	<link rel=stylesheet href="css/default.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigins=anomymous >
 	<link rel="stylesheet" href="css/layout.css">
 
