--- a/WebContent/article1.html
+++ b/WebContent/article1.html
@@ -11,7 +11,7 @@
 	<title>Lobby Mad Discord</title>
 	<link rel=stylesheet href="css/default.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigins=anomymous >
-	<link rel="stylesheet" href="css/layout.css">
+	<link rel="stylesheet" href="css/article.css">
 
 </head>
 <body>
@@ -64,9 +64,13 @@
 		Inoltre vi è un piano superiore con diversi uffici nei quali è possibile fare abbonamenti ed iscriversi al club in modo da poter usufruire di diversi sconti e non perdersi i diversi eventi di gaming organizzati dagli amministratori della lobby.
 		Su che aspetti? Vieni tu stesso a testare il brivido del gaming a "Lobby a salerno" e avrai in omaggio § </p>
 </div>
-<div id=video><center><iframe width="1024" height="768" src="https://www.youtube.com/embed/d6TV1ARhtpQ?autoplay=1">
-</iframe></center>
+<!--<div id=video><iframe width="1024" height="768" src="https://www.youtube.com/embed/d6TV1ARhtpQ?autoplay=1">
+</iframe>
+</div>  -->
+<div>
+<video width="500" height="500" controls>
+<source src="https://www.youtube.com/embed/d6TV1ARhtpQ?autoplay=1">
+</video>
 </div>
-
 </body>
 </html>
