--- a/WebContent/article2.html
+++ b/WebContent/article2.html
@@ -12,7 +12,7 @@
 	
 	<link rel=stylesheet href="css/default.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigins=anomymous >
-	<link rel="stylesheet" href="css/layout.css">
+	<link rel="stylesheet" href="css/article.css">
 
 </head>
 <body>
