--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -22,7 +22,7 @@
 <body> 
 
 <!--  SIDEBAR -->
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #222222;">
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #222222;">
   <a class="navbar-brand" href="index.html">
   <img id=logo alt="logo_azienda" src="https://media.tenor.com/images/1aa6e82e4cc8e7a367740f18ace6eba2/tenor.gif" width="60">
   </a>
