--- a/WebContent/article2.html
+++ b/WebContent/article2.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #171717;">
+<nav id= nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #171717;">
   <a class="navbar-brand" href="index.html">
   <img id=logo alt="logo_azienda" src="https://media.tenor.com/images/1aa6e82e4cc8e7a367740f18ace6eba2/tenor.gif" width="60">
   </a>
