--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -157,9 +157,9 @@
     </div>
 
 		<footer class="bottom">
-		<span><u>PAOLO APOSTOLICO, 
-		PAMELA CASULLO, 
-		GIULIO TRIGGIANI. 
+		<span><u>APOSTOLICO PAOLO, 
+		CASULLO PAMELA, 
+		TRIGGIANI GIULIO. 
 		Diritti ai rispettivi proprietari</u>©</span>
 			</footer>
 	
