--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -42,7 +42,7 @@
       <a class="nav-link" href="#">About</a>
       </li>
       <li>
-      <a class="nav-link" href="#">Shop</a>
+      <a class="nav-link" href="shop.jsp">Shop</a>
       </li>
    
     </ul>
