--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -156,7 +156,7 @@
     </div>
     </div>
 
-		<footer class="bottom">
+		<footer>
 		<span><u>APOSTOLICO PAOLO, 
 		CASULLO PAMELA, 
 		TRIGGIANI GIULIO. 
