--- a/WebContent/article1.html
+++ b/WebContent/article1.html
@@ -57,10 +57,10 @@
 
 	
 <div class=article>
-    <h1><img id=logo src="https://c7.uihere.com/files/213/439/710/discord-computer-icons-social-media-online-chat-internet-bot-remix.jpg" width=100><center>Nuova Apertura lobby a Salerno per i "Mad Discord"</center></h1>
-    <br><br><br>
+    <h1><img id=logo src="https://c7.uihere.com/files/213/439/710/discord-computer-icons-social-media-online-chat-internet-bot-remix.jpg" width=100>Nuova Apertura lobby a Salerno per i "Mad Discord"</h1>
+    <br>
     <video class=center width="700" height="330" controls autoplay>
-    		<source src="videos/Op_MaDiscord	.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+    		<source src="videos/Op_MaDiscord.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 	</video>
 	<p> Su tanta richiesta da voi fan e gamers è stata inaugurata l'apertura della nuova gaming lobby proprio al centro di Salerno raggiungibile anche tramite navetta dalla stazione.
 		Con uno spazio di oltre 100 m² essa potrà ospitare oltre 20 postazioni pc dotati di componenti di ultima generazione che permetteranno performance eccezionali per qualunque tipo di gioco, una couch zone per riposarsi dopo lunghe sessione di gaming, una zona bar che aprirà durante la serata e un'ulteriore zona gaming con diverse console tra quali: playstation IV, Xbox, e altro...
@@ -68,7 +68,7 @@
 		Inoltre vi è un piano superiore con diversi uffici nei quali è possibile fare abbonamenti ed iscriversi al club in modo da poter usufruire di diversi sconti e non perdersi i diversi eventi di gaming organizzati dagli amministratori della lobby.
 		Su che aspetti? Vieni tu stesso a testare il brivido del gaming a "Lobby a salerno" e avrai in omaggio § <br><br><br><br><br>
 		
-		<button type="button" class="btn btn-dark"> <-- Articolo Precedente</button>
+		<a href=article2.html><button type="button" class="btn btn-dark"> <-- Articolo Precedente</button></a>
 
 		<button style="float:right;" type="button" class="btn btn-dark">Articolo Successivo --></button></p>
 </div>
