--- a/WebContent/article2.html
+++ b/WebContent/article2.html
@@ -62,7 +62,13 @@
     <br><br><br>
 	<p> Inizia la nuova stagione e-sport per il team ufficiale "Esport società" nel torneo nazionale PG Nationals di lega prima dove si contenderanno numerosi team ben conosciuti nello scenario esport italiano (come gli imbattuti Team-Z) ma anche nuove entrate e nuovi volti pronti per mostrare il loro valore. Manager Daniele Basso e coach Marco Leandri rilasciano parole rassicuranti dicendo di poter garantire un buon posto per la loro squadra in questa stagione e nei vari tornei a venire usando tali parole "In questa stagione stagione i ragazzi riusciranno a dare spettacolo mostrando il duro lavoro messo durante gli allenamenti per creare l'impeccabile sinergia che ora possiedono".
 		Questa stagione, come le precedenti, prevede 3 tornei ufficiali con annessi qualifier per parteciparvi e dalle dichiarazioni fatte "Esport Società" non salterà alcuno di quest'ultimi mettendosi completamente in gioco per quello che sarà questa stagione 2020-2021.
-		Non rimane che dare in bocca al lupo ai nostri ragazzi e soprattutto al nostro allenatore con la speranza che riusciranno a portare a casa risultati sensazionali!</p>
+		Non rimane che dare in bocca al lupo ai nostri ragazzi e soprattutto al nostro allenatore con la speranza che riusciranno a portare a casa risultati sensazionali!
+		<br><br><br><br><br>
+		
+		<button type="button" class="btn btn-dark"> <-- Articolo Precedente</button>
+
+		<a href=article1.html><button style="float:right;" type="button" class="btn btn-dark">Articolo Successivo --></button></a>
+		</p>
 </div>
 
 </body>
