--- a/WebContent/article2.html
+++ b/WebContent/article2.html
@@ -58,7 +58,7 @@
 </nav>
 	
 <div class=article>
-    <h1><img id=logo src="https://c7.uihere.com/files/213/439/710/discord-computer-icons-social-media-online-chat-internet-bot-remix.jpg" width=100><center>Nuova Stagione per i Mad Discord</center></h1>
+    <h1><img id=logo src="https://c7.uihere.com/files/213/439/710/discord-computer-icons-social-media-online-chat-internet-bot-remix.jpg" width=100>Nuova Stagione per i Mad Discord</h1>
     <br><br><br>
 	<p> Inizia la nuova stagione e-sport per il team ufficiale "Esport società" nel torneo nazionale PG Nationals di lega prima dove si contenderanno numerosi team ben conosciuti nello scenario esport italiano (come gli imbattuti Team-Z) ma anche nuove entrate e nuovi volti pronti per mostrare il loro valore. Manager Daniele Basso e coach Marco Leandri rilasciano parole rassicuranti dicendo di poter garantire un buon posto per la loro squadra in questa stagione e nei vari tornei a venire usando tali parole "In questa stagione stagione i ragazzi riusciranno a dare spettacolo mostrando il duro lavoro messo durante gli allenamenti per creare l'impeccabile sinergia che ora possiedono".
 		Questa stagione, come le precedenti, prevede 3 tornei ufficiali con annessi qualifier per parteciparvi e dalle dichiarazioni fatte "Esport Società" non salterà alcuno di quest'ultimi mettendosi completamente in gioco per quello che sarà questa stagione 2020-2021.
