--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -120,8 +120,8 @@
                               <div class="carousel-caption d-none d-md-block">
                                 <h4>
                                     <span id="article-preview">
-                                    <a href=article2.html><button class="btn btn-primary btn-lg">NUOVA STAGIONE E-SPORT PER I MAD DISCORD</button></span></a>
-                                    
+                                    <a href=article2.html><button class="btn btn-primary btn-lg">NUOVA STAGIONE E-SPORT PER I MAD DISCORD</button></a>
+                                    </span>
                                 </h4>
                               </div>
                             </div>
