--- a/WebContent/password.html
+++ b/WebContent/password.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
@@ -34,9 +34,9 @@
                                         <div class="input-group">
                                             <select class="form-control" id="sel1">
                                                 <option selected="selected" disabled="disabled" >Seleziona la domanda di sicurezza</option>
-                                                <option>Qual è il tuo film preferito?</option>
-                                                <option>Qual è il nome del tuo animale domestico?</option>
-                                                <option>Qual è il nome della tua città?</option>
+                                                <option>Qual Ã¨ il tuo film preferito?</option>
+                                                <option>Qual Ã¨ il nome del tuo animale domestico?</option>
+                                                <option>Qual Ã¨ il nome della tua cittÃ ?</option>
                                             </select>
                                         </div>
                                     </div>
