mi scoppia la testa vado in pausa un attimo
- paolo potresti per favore occuparti almeno del css?
- abbiamo quasi finito, se domani ci siete tutti facciamo almeno 2 pagine su 3
-mancano da fare ancora: Admin/Article, Admin/Utenti, Carrello, , User/paginasua, password dimenticata,css,security+DOCUMENTAZIONE

--- a/WebContent/password.html
+++ b/WebContent/password.html
@@ -31,14 +31,7 @@
                                     </div>
                                 <form id="register-form" role="form" autocomplete="off" class="form" method="post">
                                     <div class="form-group">
-                                        <div class="input-group">
-                                            <select class="form-control" id="sel1">
-                                                <option selected="selected" disabled="disabled" >Seleziona la domanda di sicurezza</option>
-                                                <option>Qual è il tuo film preferito?</option>
-                                                <option>Qual è il nome del tuo animale domestico?</option>
-                                                <option>Qual è il nome della tua città?</option>
-                                            </select>
-                                        </div>
+                                      //  PAOLO VEDITELA TU VEDI DI NON FARCI FARE BRUTTA FIGURA. SE DOBBIAMO FARE MODIFICHE AL DATABASE FAMMI SAPERE
                                     </div>
                                     <div class="form-group">
                                         <div class="input-group">
